5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1728_2496.log
== TEST (2019-05-08 19:06:27) 
-- CODE:
num = int(input"digite o numero: ")
soma == 0
while(num !=(-1)):
	if(num == 0 )
	else:
		
		print(int(input("digite o numero")))
	
	

-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:06:48) 
-- CODE:
num = int(input"digite o numero: ")
soma == 0
while(num !=(-1)):
	if(num == 0 )
	else:
		
		print(num)
	
	

-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:08:53) 
-- CODE:
num = int(input"digite o numero: ")
soma = num
while(num !=(-1)):
	if(num == 0 )
	else:
		
		print(num)
	
	

-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:08:54) 
-- CODE:
num = int(input"digite o numero: ")
soma = num
while(num !=(-1)):
	if(num == 0 )
	else:
		
		print(num)
	
	

-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:09:12) 
-- CODE:
x = int(input"digite o numero: ")
soma = num
while(num !=(-1)):
	if(num == 0 )
	else:
		
		print(num)
	
	

-- ERROR:
File "XXXX", line 1
    x = int(input"digite o numero: ")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:09:28) 
-- CODE:
x = float(input"digite o numero: ")
soma = num
while(num !=(-1)):
	if(num == 0 )
	else:
		
		print(num)
	
	

-- ERROR:
File "XXXX", line 1
    x = float(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 14:11:31) 
-- CODE:
num = int(input"digite o numero: ")
soma == 0

while(num != (-1)):
	if (soma + % (-1))
	
	else:
	print(num)



-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 14:11:35) 
-- CODE:
num = int(input"digite o numero: ")
soma == 0

while(num != (-1)):
	if (soma + % (-1))
	
	else:
	print(num)



-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:06:05) 
-- CODE:
num = int(input"digite o numero: ")
soma == 0

while(num != (-1)):
	soma = num + soma
	num = int(input("digite o numero: "))
	 
	print(soma)



-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:06:22) 
-- CODE:
num = int(input"digite o numero: ")
soma = 0

while(num != (-1)):
	soma = num + soma
	num = int(input("digite o numero: "))
	 
	print(soma)



-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:06:31) 
-- CODE:
num = int(input"digite o numero: ")
soma = 0

while(num != (-1)):
	soma = num + soma
	num = int(input("digite o numero: "))
	 
print(soma)



-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:07:00) 
-- CODE:
num = int(input"digite o numero: ")
soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("digite o numero: "))
	 
print(soma)



-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:07:36) 
-- CODE:
num = int(input"digite o numero: ")

soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("digite o numero: "))
print(soma)



-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:07:38) 
-- CODE:
num = int(input"digite o numero: ")

soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("digite o numero: "))
print(soma)



-- ERROR:
File "XXXX", line 1
    num = int(input"digite o numero: ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:08:00) 
-- CODE:
num = int(input("digite o numero: ")

soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("digite o numero: "))
print(soma)



-- ERROR:
File "XXXX", line 3
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:08:11) 
-- CODE:
num = int(input("digite o numero: ")

soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("digite o numero: "))
print(soma)



-- ERROR:
File "XXXX", line 3
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:08:39) 
-- CODE:
num = int(input("digite o numero: "))

soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("digite o numero: "))
print(soma)



-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:09:00) 
-- CODE:
num = int(input("digite o numero: "))

soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("digite o numero: "))
print(soma)



-- EXECUTION TIME:
0.27565
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
